--- a/src/reset.css
+++ b/src/reset.css
@@ -28,7 +28,8 @@ dd {
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul,
-ol {
+ol,
+li {
   padding-inline-start: 0;
   list-style: none;
 }
