Implement `choiceCount` changer

--- a/src/components/Gym.module.css
+++ b/src/components/Gym.module.css
@@ -3,4 +3,8 @@
   flex-direction: column;
   justify-content: stretch;
   max-width: 480px;
+
+  & > :not(:last-child) {
+    margin-bottom: 32px;
+  }
 }
