--- a/src/components/QuestionViewer/QuestionViewer.module.css
+++ b/src/components/QuestionViewer/QuestionViewer.module.css
@@ -30,13 +30,19 @@
     flex-direction: column;
     justify-content: stretch;
     padding: 0;
+    gap: 16px;
+
+    &.two_track {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+
+      .next_button {
+        grid-column: 1 / span 2;
+      }
+    }
 
     .choice-wrapper {
       list-style-type: none;
-
-      &:not(:last-child) {
-        margin-bottom: 16px;
-      }
 
       .choice {
         width: 100%;
@@ -57,8 +63,6 @@
             color: inherit;
           }
         }
-
-        &:;
       }
     }
   }
