--- a/src/components/Container.module.css
+++ b/src/components/Container.module.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content: stretch;
+  align-items: stretch;
   max-width: 480px;
+  width: 100%;
 
   & > :not(:last-child) {
     margin-bottom: 32px;
