--- a/src/components/Statistics/GroupsStatistics.module.css
+++ b/src/components/Statistics/GroupsStatistics.module.css
@@ -33,8 +33,28 @@
       grid-template-columns: repeat(8, 1fr);
       gap: 8px;
 
-      & > button {
+      .kanji {
+        display: inline-flex;
         height: 32px;
+        justify-content: center;
+        text-decoration: none;
+        color: #444;
+
+        &.F {
+          background-color: #bbb;
+        }
+
+        &.B {
+          background-color: #e33;
+        }
+
+        &.A {
+          background-color: #ee3;
+        }
+
+        &.S {
+          background-color: #3e3;
+        }
       }
     }
   }
