Implement coloring in character statistics label

--- a/src/components/Statistics/CharacterStatistics.module.css
+++ b/src/components/Statistics/CharacterStatistics.module.css
@@ -25,6 +25,24 @@
         width: 96px;
         font-weight: bold;
       }
+
+      .value {
+        &.F {
+          color: #555;
+        }
+
+        &.B {
+          color: #d22;
+        }
+
+        &.A {
+          color: #da2;
+        }
+
+        &.S {
+          color: #2d2;
+        }
+      }
     }
 
     .study-states {
