--- a/src/components/Statistics/GroupsStatistics.module.css
+++ b/src/components/Statistics/GroupsStatistics.module.css
@@ -6,13 +6,21 @@
   .details {
     border: 1px solid #555;
     border-radius: 8px;
-    padding: 8px;
+
+    & > * {
+      padding: 0 16px;
+
+      &:last-child:not(:first-child) {
+        margin-bottom: 16px;
+      }
+    }
 
     .title {
       display: flex;
       justify-content: stretch;
       align-items: center;
       width: 100%;
+      height: 40px;
       background: none;
       border: none;
 
@@ -31,7 +39,6 @@
 
     .buttons {
       margin: 16px 0;
-      padding: 0 12px;
       display: grid;
       grid-template-columns: repeat(8, 1fr);
       gap: 8px;
