Fix grade color

--- a/src/components/Statistics/CharacterStatistics.module.css
+++ b/src/components/Statistics/CharacterStatistics.module.css
@@ -31,11 +31,11 @@
       }
 
       .B {
-        color: #d22;
+        color: #ebbc00;
       }
 
       .A {
-        color: #da2;
+        color: #ac5;
       }
 
       .S {
