--- a/src/components/QuestionViewer/QuestionViewer.module.css
+++ b/src/components/QuestionViewer/QuestionViewer.module.css
@@ -20,8 +20,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(min(10vw, 64px));
-    font-size: calc(min(10vw, 64px));
+    height: 64px;
+    font-size: 64px;
     width: 100%;
   }
 
@@ -44,13 +44,26 @@
     .choice-wrapper {
       list-style-type: none;
 
+      button {
+        cursor: pointer;
+      }
+
       .choice {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
         width: 100%;
         padding: 10px;
         border-radius: 8px;
         border: 1px solid #555;
         background: #fff;
-        cursor: pointer;
+        color: black;
+        text-align: center;
+
+        &.answers {
+          height: 100px;
+        }
 
         &.wrong {
           background-color: #e33;
@@ -62,6 +75,44 @@
           &:disabled {
             color: inherit;
           }
+        }
+
+        .dimmed {
+          color: #ddd;
+        }
+
+        .semi-dimmed {
+          color: #555;
+        }
+
+        .furiganas {
+          background: none;
+          border: none;
+          width: 90%;
+          height: 2.5em;
+          overflow-y: scroll;
+          overflow-wrap: normal;
+          word-break: keep-all;
+          padding: 0;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+
+          em {
+            color: black;
+            font-style: normal;
+            font-weight: bold;
+          }
+
+          & > {
+            margin-right: 10px;
+          }
+        }
+
+        .kanji {
+          font-size: 3rem;
+          line-height: 100%;
+          vertical-align: middle;
         }
       }
     }
